# hwgdbot

./: .gitignore  .lint-history.txt  HwGDBot.desktop  HwGDBot.spec  README.md  automod_service.py  backup_service.py  gd_integration.py  log.txt  main.py  main_window.py  notification_service.py  obs_overlay.py  obs_web_overlay.py  queue_manager.py  report_dialog.py  requirements.txt  run.bat  run.sh  settings_window.py  twitch_service.py  update_checker.py  youtube_dialog.py  youtube_service.py
.github/workflows/: Lint.yml  aaaaaaaaaaaaaaaaaaaa.yml  bake.yml  build.yml
python/: youtube-chat-fehtch.py
src/: index.html  main.js  settings.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: backup.rs  gd_api.rs  logger.rs  main.rs  overlay.rs  queue.rs  settings.rs  sounds.rs  twitch.rs  youtube.rs
